Fixed some bugs using tests